// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationPermissionBar > should render the NotificationPermissionNeverGrantedBar when permission is never granted yet 1`] = `
<div>
  <div
    class="announcement-bar"
    css="[object Object]"
  >
    <div
      class="announcement-bar__text"
    >
      <i
        class="icon icon-alert-circle-outline"
      />
      <span>
        We need your permission to show notifications in the browser.
      </span>
      <button
        class="btn btn-tertiary btn-xs btn-inverted"
      >
        Manage notification preferences
      </button>
    </div>
    <a
      class="announcement-bar__close"
      href="#"
    >
      ×
    </a>
  </div>
</div>
`;

exports[`NotificationPermissionBar > should render the NotificationUnsupportedBar if notifications are not supported 1`] = `
<div>
  <div
    class="announcement-bar"
    css="[object Object]"
  >
    <div
      class="announcement-bar__text"
    >
      <i
        class="icon icon-alert-circle-outline"
      />
      <span>
        Your browser does not support browser notifications.
      </span>
      <button
        class="btn btn-tertiary btn-xs btn-inverted"
      >
        Update your browser
      </button>
    </div>
    <a
      class="announcement-bar__close"
      href="#"
    >
      ×
    </a>
  </div>
</div>
`;
